Added Dem download capabilities

--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -1,5 +1,4 @@
 {% extends "template.html" %}
 {% block content %}
-    <h2>I'm online!!</h2>
-    <img src="{{ url_for('static', filename='img/pic.JPG') }}" alt='Glenn and Lissette'>
+    <h2>Under Construction ...</h2>
 {% endblock %}
