--- a/app/templates/blog.html
+++ b/app/templates/blog.html
@@ -1,7 +1,4 @@
 {% extends "template.html" %}
 {% block content %}
-    <p>
-        A blog documenting the processes and some programming is in the works./n
-        Check back for progress.
-    </p>
+    <h2>Under Construction ...</h2>
 {% endblock %}
