--- a/app/templates/contact.html
+++ b/app/templates/contact.html
@@ -1,8 +1,4 @@
 {% extends "template.html" %}
 {% block content %}
-    <p>
-        Contact info is soon to be updated.
-        For now, please direct questions to Glenn Vorhes at
-        glennvorhes@gmail.com
-    </p>
+    <h2>Under Construction ...</h2>
 {% endblock %}
