--- a/app/templates/contact.html
+++ b/app/templates/contact.html
@@ -1,4 +1,17 @@
 {% extends "template.html" %}
 {% block content %}
-    <h2>Under Construction ...</h2>
+    <div style="height: 250px;">
+    <h3 style="padding-left: 15px;">Contact</h3>
+    <p style='padding: 5px 20px; width: 300px;'>
+        I invite any comments or feedback on the application.
+        Feel free to contact me with questions or suggested improvements.
+    </p>
+    <p style="padding-left: 20px; font-size: 12px;"><b>Glenn Vorhes</b><br/>
+    608-347-5831<br>
+    <a href="mailto:glennvorhes@gmail.com?subject=Open Terrain Map">Email</a>
+    </p>
+</div>
+
+
+
 {% endblock %}
