--- a/app/templates/blog.html
+++ b/app/templates/blog.html
@@ -1,4 +1,7 @@
 {% extends "template.html" %}
 {% block content %}
     <h2>Under Construction ...</h2>
+    <div style="height: 400px;">
+        Plan to have list of blog postings, code hints, etc.
+    </div>
 {% endblock %}
