--- a/app/templates/template.html
+++ b/app/templates/template.html
@@ -40,11 +40,12 @@
 
                 <div class='pageBlock' id="buttons">
                     <ul>
-                        <li><a href="{{ url_for('index') }}" class="but" title="">Home</a></li>
-                        <li><a href="{{ url_for('blog') }}" class="but" title="">Blog</a></li>
-                        <li><a href="{{ url_for('getProjects') }}" class="but" title="">Projects</a></li>
-                        <li><a href="{{ url_for('about') }}" class="but" title="">About</a></li>
-                        <li><a href="{{ url_for('contact') }}" class="but" title="">Contact</a></li>
+                        <li><a href="{{ url_for('index') }}">Home</a></li>
+                        <li><a href="{{ url_for('getDem') }}">Get Data</a></li>
+                        <li><a href="{{ url_for('getProjects') }}">Projects</a></li>
+                        <li><a href="{{ url_for('blog') }}">Blog</a></li>
+                        <li><a href="{{ url_for('about') }}">About</a></li>
+                        <li><a href="{{ url_for('contact') }}">Contact</a></li>
                     </ul>
                 </div>
                 <div class='pageBlock'>
