Display full email in contact page rather than 'email' link

--- a/app/templates/contact.html
+++ b/app/templates/contact.html
@@ -8,7 +8,7 @@
     </p>
     <p style="padding-left: 20px; font-size: 12px;"><b>Glenn Vorhes</b><br/>
     608-347-5831<br>
-    <a href="mailto:glennvorhes@gmail.com?subject=Open Terrain Map">Email</a>
+    <a href="mailto:glennvorhes@gmail.com?subject=Open Terrain Map">glennvorhes@gmail.com</a>
     </p>
 </div>
 
