--- a/app/templates/template.html
+++ b/app/templates/template.html
@@ -48,8 +48,12 @@
                         <li><a href="{{ url_for('contact') }}">Contact</a></li>
                     </ul>
                 </div>
-                <div class='pageBlock'>
-                    <img src="{{ url_for('static', filename='img/lyout/banner.png') }}" alt='logo' />
+                <div class='pageBlock' style='position: relative;'>
+                    <img src="{{ url_for('static', filename='img/lyout/banner.png') }}" alt='logo' width='1000'/>
+                    <span style='position: absolute; left:320px; top: 80px; font-size: 64px; color: white;
+                    text-shadow: -4px 0 black, 0 4px black, 4px 0 black, 0 -4px black;'>
+                        <b>Open Terrain Map</b>
+                    </span>
                     <div id="loginControl" class="pageBlock">
                         {% if g.user.is_authenticated() %}
                             Logged in as: <br/>
