Changed error on get data output options, duplicate of get png changed to get zip

--- a/app/templates/getDem.html
+++ b/app/templates/getDem.html
@@ -49,7 +49,7 @@
                     <b>base64png</b> The base 64 representation of the PNG.  <br/>This is useful for
                     adding the returned results to an image tag or url in the <br/>context of
                     src/url = "data:image/png;base64,<<i>base 64 string</i>>"</li>
-                <li><b>imagepng</b> Returns a png image to the browser.  This is the default.</li>
+                <li><b>zip</b> Returns the image and an xml with projection information in a zip file</li>
 
             </ul>
         </p>
