--- a/app/static/css/tmplstyle.css
+++ b/app/static/css/tmplstyle.css
@@ -1,3 +1,11 @@
+html {
+  background: url(la_sierra_view.jpg) no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+
 a:hover {
     text-decoration:none;
     color:#32A5E7;
@@ -11,9 +19,7 @@ code {
 }
 
 body {
-    font:12px Arial, Helvetica, sans-serif;
-    background: -webkit-gradient(#32A5E7, #ffffff);
-    background: linear-gradient(to bottom, #32A5E7, white);
+    font:14px Arial, Helvetica, sans-serif;
     margin:4px 0px 0px 0px;
     line-height:20px;
 }
@@ -25,12 +31,11 @@ body {
 
 .pageBlock {
     width:1016px;
-    padding:3px;
-    background-color: white;
-    border:black solid thin;
+    padding:5px;
+    background-color:rgba(255,255,255,0.80);
     -moz-border-radius: 15px;
     border-radius: 15px;
-    margin:3px;
+    margin:20px 0px;
     position: relative;
 }
 
@@ -38,19 +43,28 @@ body {
     position: absolute;
     right: 10px;
     top: 10px;
-    /*z-index: 999;*/
+    background-color: white;
     font-size:14px;font-family:Arial Narrow, rial, Helvetica, sans-serif;
     height: 40px;
     width: 150px;
     text-align: center;
 }
 
-
-
 #buttons {
-    background: #32A5E7;
+    background: #32a5e7;
     text-align:center;
     height:50px;
+}
+
+#buttons {
+    width:100%;
+    background-color: #3a8bb2;
+    position: absolute;
+    top: 0px; left: 0px;
+    -moz-border-radius: 15px 15px 0px 0px;
+    border-radius: 15px 15px 0px 0px;
+    margin: 0px;
+    padding: 0px;"
 }
 
 #buttons ul{
@@ -68,39 +82,34 @@ body {
     font-size:18px;
     display:block;
     float:left;
-    -moz-border-radius: 15px;
-    border-radius: 15px;
+    -moz-border-radius: 15px 15px 0px 0px;
+    border-radius: 15px 15px 0px 0px;
     height:37px;
     text-decoration:none;
     color:#fff;
     padding-top:11px;
-    width:168px;
+    width:170px;
 }
 
 #buttons a:hover {
-    text-decoration:underline;
-    border: #dfdfdf solid thin;
-    background: #3487e7;
+    /*text-decoration:underline;*/
+    /*border: #dfdfdf solid thin;*/
+    background: rgba(72, 117, 178, 0.84)
 }
 
 #right {
     width:285px;
     margin:0;
     float:right;
-    color:#000;
+    padding: 5px;
 }
 
-.right_b {
-    background:url(../img/lyout/fish.png) 10px 17px no-repeat;
-    padding-left:32px;
-    padding-top:15px;
-    width:240px;
-    height: 210px;
-    overflow: hidden;
-    text-align: justify;
+#right h1 {
+    color: #276FC0;
+    font-size: 15pt;
 }
 
-.text {
+.front_page_text {
     padding:10px 0px 0px 5px;
     text-align: justify;
 }
@@ -120,17 +129,23 @@ body {
     font-weight:bold;
 }
 
-.col_b {
+.post_title {
     color:#276FC0;
 }
 
-#right H1 {
-    font-family:Arial Narrow, Arial, Helvetica, sans-serif;
-    font-size:18px;
-    font-weight:100;
-    color:#fff;text-align:center;
-    height:32px;
-    padding-top:12px;
+.post_container {
+    border-radius: 10px;
+}
+
+.short_post {
+    padding: 10px;
+    width:240px;
+    height: 240px;
+    overflow: hidden;
+    text-align: justify;
+    background-image: -webkit-gradient(#32a5e7, rgba(255,255,255,0) 15%);
+    background-image: linear-gradient(to bottom, #32A5E7, rgba(255,255,255,0) 15%);
+    border-radius: 10px;
 }
 
 #left H2 {
@@ -157,17 +172,11 @@ body {
     padding:0px 0px 0px 0px;
 }
 
-.tit_bot {
-    background:url(../img/lyout/right_tit_bot.jpg) left top no-repeat;
-    padding:5px 0 0px 0px;
-}
-
-#footer {
-    text-align: center;
-    height: 50px;
-    background: -webkit-gradient(#32A5E7, #ffffff);
-    background: linear-gradient(to bottom, #32A5E7, white);
-}
 
 
-
+/*#footer {*/
+    /*text-align: center;*/
+    /*height: 50px;*/
+    /*background: -webkit-gradient(#32A5E7, #ffffff);*/
+    /*background: linear-gradient(to bottom, #32A5E7, white);*/
+/*}*/
