split views into different files, started tutorial page

--- a/app/static/css/tmplstyle.css
+++ b/app/static/css/tmplstyle.css
@@ -97,6 +97,10 @@ body {
     background: rgba(72, 117, 178, 0.84)
 }
 
+.nav_here{
+    background: lightseagreen;
+}
+
 #right {
     width:285px;
     margin:0;
