--- a/app/templates/template.html
+++ b/app/templates/template.html
@@ -53,29 +53,30 @@
                     {% endif %}
                 </div>
             </div>
-{#            <div class='pageBlock' id="buttons">#}
-{##}
-{#            </div>#}
+
+
         </div>
         <!-- / header -->
-        <!-- content -->
+
         <div class='pageBlock' style="padding-top: 40px;">
-            <div id='buttons'>
+            <nav id='buttons'>
                 <ul>
-                    <li><a href="{{ url_for('index') }}">Home</a></li>
-                    <li><a href="{{ url_for('getDem') }}">Get Data</a></li>
-                    <li><a href="{{ url_for('getProjects') }}">Projects</a></li>
-                    <li><a href="{{ url_for('blog') }}">Blog</a></li>
-                    <li><a href="{{ url_for('about') }}">About</a></li>
-                    <li><a href="{{ url_for('contact') }}">Contact</a></li>
+                    <li><a href="{{ url_for('index') }}" class="{{ "nav_here" if title == "Home" else "" }}">Home</a></li>
+                    <li><a href="{{ url_for('getDem') }}" class="{{ "nav_here" if title == "Get Data" else "" }}">Get Data</a></li>
+                    <li><a href="{{ url_for('getProjects') }}" class="{{ "nav_here" if title == "Projects" else "" }}">Projects</a></li>
+                    <li><a href="{{ url_for('tutorials') }}" class="{{ "nav_here" if title == "Tutorials" else "" }}">Tutorials</a></li>
+                    <li><a href="{{ url_for('about') }}" class="{{ "nav_here" if title == "About" else "" }}">About</a></li>
+                    <li><a href="{{ url_for('contact') }}" class="{{ "nav_here" if title == "Contact" else "" }}">Contact</a></li>
                 </ul>
-            </div>
+            </nav>
+            <!-- content -->
             {% block content %}{% endblock content%}
+            <!-- / content -->
         </div>
 
 
 
-        <!-- / content -->
+
         <!-- footer -->
 {#            <div id="footer" class='pageBlock'>#}
 {#                &copy;<script>var d = new Date(); document.write(d.getFullYear().toString());</script>#}
