--- a/app/templates/terrainMap.html
+++ b/app/templates/terrainMap.html
@@ -13,7 +13,6 @@
         <script src="{{ url_for('static', filename='js/jquery-ui-1.10.3.min.js') }}"></script>
         <script src='{{url_for('static', filename='js/OpenLayers.js')}}'></script>
         <script src='{{url_for('static', filename='js/ExtentLayer.js')}}'></script>
-        <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
         <script src="http://maps.google.com/maps/api/js?v=3&sensor=false"></script>
         <style type="text/css">
             html, body {
@@ -22,9 +21,18 @@
               margin: 0;
             }
             #borderContainer {
-              width: 100%;
+              width: 50%;
               height: 100%;
             }
+
+            #map_element {
+              width: 100%;
+              height: 100%;
+              border: solid lightskyblue 4px;
+                -moz-box-sizing: border-box;
+                box-sizing: border-box;
+            }
+
         </style>
         <script>
             $SCRIPT_ROOT={{ request.script_root|tojson|safe }};
@@ -66,33 +74,44 @@
                 )]);
 
                 map.zoomToMaxExtent();
+                map.zoomIn();
+                map.zoomOut();
+                map.zoomOut();
                 extentLayer = new ExtentLayer(map, {}, 'set_extent_radio',true, 'demOpacitySlider');
 
-                document.getElementById('downloadDem').onclick = downloadDemFunction;
+                $('#downloadDem').click(function (){
+                    if (!extentLayer.extentGeom){
+                        alert('Select a geometry first');
+                        return
+                    }
+                    var geomClone = extentLayer.extentGeom.clone();
+
+                    geomClone.transform(new OpenLayers.Projection("EPSG:3857"), new OpenLayers.Projection("EPSG:4326"));
+                    var extentWKT = extentLayer.wktParser.extractGeometry(geomClone);
+                    var outputSRID = $('#sridSelect').val();
+
+                    var demDownloadUrl = $SCRIPT_ROOT + '/getdem?outformat=zip&insrid=4326&outsrid=' + outputSRID;
+                    demDownloadUrl += '&geom=' + extentWKT;
+
+                    window.open(demDownloadUrl, '_blank');
+                })
+
+                map.events.register("mousemove", map, function (e) {
+                    var point;
+                    point = map.getLonLatFromPixel(this.events.getMousePosition(e))
+                        .transform(new OpenLayers.Projection("EPSG:3857"), new OpenLayers.Projection("EPSG:4326"));
+
+                    $('#mapcoordinates').html(point.lat.toFixed(5) + "&deg, " + point.lon.toFixed(5) + "&deg");
+                });
             });
 
-            function downloadDemFunction(){
-                if (!extentLayer.extentGeom){
-                    alert('Select a geometry first');
-                    return
-                }
-                var geomClone = extentLayer.extentGeom.clone();
 
-                geomClone.transform(new OpenLayers.Projection("EPSG:3857"), new OpenLayers.Projection("EPSG:4326"));
-                var extentWKT = extentLayer.wktParser.extractGeometry(geomClone);
-                var outputSRID = document.getElementById('sridSelect').value;
-
-                var demDownloadUrl = $SCRIPT_ROOT + '/getdem?outformat=zip&insrid=4326&outsrid=' + outputSRID;
-                demDownloadUrl += '&geom=' + extentWKT;
-
-                window.open(demDownloadUrl, '_blank');
-            }
         </script>
     </head>
     <body class='soria'>
-        <div data-dojo-type="dijit/layout/BorderContainer"
-            data-dojo-props="design:'sidebar', gutters:true, liveSplitters:true" id="borderContainer">
-            <div id='map_element' data-dojo-type="dijit/layout/ContentPane" data-dojo-props="region:'center'">
+            <div id='map_element'>
+                <span id='mapcoordinates' style="padding: 1px 5px; position: absolute; bottom: 5px; left:80px; color: #d3d3d3; z-index: 999; border-radius: 4px; border: solid white 1px; background-color: black;"></span>
+
                 <div style="position: absolute; top: 10px; left: 53px; z-index: 999;">
                     <input type="radio" id="DONE_set_extent_radio" name="set_extent_radio" checked="checked"
                     style='display: none;'/>
@@ -154,7 +173,7 @@
                 <div id='demDownloadContainer' style="position: absolute; left:430px; top:10px; z-index:999; width:160px;">
                     <div id='demDownloadTitle' data-dojo-type="dijit/TitlePane"
                         data-dojo-props="title:'Download', closable:false, open:false, region:'center'"
-{#                        onMouseLeave="var demDown = dijit.byId('demDownloadTitle'); if (demDown.open) demDown.toggle()"#}
+                        onMouseLeave="var demDown = dijit.byId('demDownloadTitle'); if (demDown.open) demDown.toggle()"
                             >
                         <label>Output SRID</label><br/>
                         <select id='sridSelect'>
@@ -166,6 +185,5 @@
                     </div>
                 </div>
             </div>
-        </div>
     </body>
 </html>
