--- a/app/templates/template.html
+++ b/app/templates/template.html
@@ -12,7 +12,7 @@
         <script src="{{ url_for('static', filename='js/jquery-1.9.1.min.js') }}"></script>
         <script src="{{ url_for('static', filename='js/jquery-ui-1.10.3.min.js') }}"></script>
         <link href="{{ url_for('static', filename='css/tmplstyle.css') }}" rel="stylesheet" type="text/css" />
-        <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+{#        <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>#}
         <script src="http://maps.google.com/maps/api/js?v=3&sensor=false"></script>
         <script src='{{url_for('static', filename='js/OpenLayers.js')}}'></script>
 {#        <script src="//ajax.googleapis.com/ajax/libs/dojo/1.8.3/dojo/dojo.js"></script>#}
