Fixed typo on home page

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -10,7 +10,7 @@
                 <a href='{{ url_for('terrainMap') }}'><img src="{{ url_for('static', filename='img/terrainMapImg.png') }}"
                      width="202" height="150" class="imgFloat" alt=""/></a>
                 <span>
-                    The best available terrain information is processed to create a hydrologically correct moedel
+                    The best available terrain information is processed to create a hydrologically correct model
                     that can be used for a variety of applications.
                 </span><br/>
                 Elevation models available from NASA and the USGS are saved as raster images.  Where available,
